--- a/index.html
+++ b/index.html
@@ -3,14 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="src/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <title>Final weather-app project</title>
 </head>
 <body>
    <div class="weather-app-container">
     <header>
     <form class="search-form">
-        <input type="search" placeholder="Enter any city...." />
-        <input type="submit" value="search"/>
+        <input type="search" placeholder="Enter any city...." required class="search-input" />
+        <input type="submit" value="search" class="submit-input"/>
     </form>
    </header>
    <main>
@@ -18,10 +22,11 @@
         <div class="weather-city">
             <h1 class="city">Lagos</h1>
             <p>
-                Monday 18:41,few clouds
+                Monday 18:41, few clouds
                 ⛅ 31℃
                 <br/>
-                Hundity
+               <div class="humidty"> Humidity: 76%, wind:16km/hr</div>
+               
 
 
             </p>
@@ -30,8 +35,8 @@
     </div>
    </main>
    <footer>
-    This project was coded by<a href="https://github.com/Ure8925"> Susan</a>, is <a href="">open-sourced on Github</a> and
-    <a href="">hosted on Vercel</a>
+    This project was coded by<a href="https://github.com/Ure8925" target="_blank"> Susan</a>, is <a href="https://github.com/Ure8925/plus-final-project" target="_blank">open-sourced on Github</a> and
+    <a href="https://plus-final-project.vercel.app/" target="_blank">hosted on Vercel</a>
    </footer>
 </body>
 </html>
