Added basic HTML weather info

--- a/index.html
+++ b/index.html
@@ -22,21 +22,25 @@
         <div class="weather-city">
             <h1 class="city">Lagos</h1>
             <p>
-                Monday 18:41, few clouds
-                ⛅ 31℃
-                <br/>
-               <div class="humidty"> Humidity: 76%, wind:16km/hr</div>
-               
-
-
+                <div class="temperature">Monday 18:41, few clouds</div>
+               <div class="humidity"> Humidity: <span>76%</span>, wind:<span>16km/hr</span></div>
+              <div class="description"><span class="icon">⛅</span><span class="temp">31<span class="unit">℃</span></div>  
             </p>
         </div>
-        
+    </div>
+    <div class="weather-forecast">
+    <span class="weather-forecast-day"> Thur</span>
+    <div class="weather-forecast-icon">☀️</div>
+    <div class="weather-forecast-info"> <span class="weather-forecast-min">26°</span> <span class="weather-forecast-max">32°</span> 
     </div>
    </main>
    <footer>
-    This project was coded by<a href="https://github.com/Ure8925" target="_blank"> Susan</a>, is <a href="https://github.com/Ure8925/plus-final-project" target="_blank">open-sourced on Github</a> and
+    <p>
+    This project was coded by
+    <a href="https://github.com/Ure8925" target="_blank">
+         Susan</a>, is <a href="https://github.com/Ure8925/plus-final-project" target="_blank">open-sourced on Github</a> and
     <a href="https://plus-final-project.vercel.app/" target="_blank">hosted on Vercel</a>
+    </p>
    </footer>
 </body>
 </html>
