made the weather app responsive

--- a/index.html
+++ b/index.html
@@ -42,5 +42,6 @@
     <a href="https://plus-final-project.vercel.app/" target="_blank">hosted on Vercel</a>
     </p>
    </footer>
+   <script src="src/script.js"></script>
 </body>
 </html>
