Added the basic search engine behavior (no API)

--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
 <body>
    <div class="weather-app-container">
     <header>
-    <form class="search-form">
-        <input type="search" placeholder="Enter any city...." required class="search-input" />
+    <form class="search-form" id="search-form">
+        <input type="search" placeholder="Enter any city...." id="search-input" required class="search-input" />
         <input type="submit" value="search" class="submit-input"/>
     </form>
    </header>
    <main>
     <div class="weather-app-content">
         <div class="weather-city">
-            <h1 class="city">Lagos</h1>
+            <h1 class="city" id="weather-city">Lagos</h1>
             <p>
                 <div class="temperature">Monday 18:41, few clouds</div>
                <div class="humidity"> Humidity: <span>76%</span>, wind:<span>16km/hr</span></div>
