Added the search functionality using the Api

--- a/index.html
+++ b/index.html
@@ -21,11 +21,14 @@
    <main>
     <div class="weather-app-content">
         <div class="weather-city">
-            <h1 class="city" id="weather-city">Lagos</h1>
+            <h1 class="city" id="weather-city"></h1>
             <p>
-                <div class="temperature">Monday 18:41, few clouds</div>
-               <div class="humidity"> Humidity: <span>76%</span>, wind:<span>16km/hr</span></div>
-              <div class="description"><span class="icon">⛅</span><span class="temp">31<span class="unit">℃</span></div>  
+                <div class="date" id="date">Monday 18:41, <span id="description"></span></div>
+               <div class="humidity" id="humidty"> Humidity: <span>76%</span>, wind:<span>16km/hr</span></div>
+              <div class="description">
+                <span class="icon">⛅</span>
+                <span class="temp" id="weather-temperature"></span>
+                <span class="unit">℃</span> 
             </p>
         </div>
     </div>
