Added some functionality

--- a/index.html
+++ b/index.html
@@ -26,19 +26,15 @@
                <span id="current-time"></span>,
                <span id="description"></span> 
                 <br />
-                Humidity: <span id="humidity"></span>, wind:<span id="wind"></span>
+                Humidity: <span class="humidity" id="humidity"></span>, wind:<span class="wind" id="wind"></span>
               <div class="description">
-                <span class="icon" id="icon">⛅</span>
+                <div  class="icon" id="icon"></div>
                 <span class="temp" id="weather-temperature"></span>
                 <span class="unit">℃</span> 
             </p>
+            
         </div>
-    
-    <div class="weather-forecast">
-    <span class="weather-forecast-day"> Thur</span>
-    <div class="weather-forecast-icon">☀️</div>
-    <div class="weather-forecast-info"> <span class="weather-forecast-min">26°</span> <span class="weather-forecast-max">32°</span> 
-    </div>
+    <div class="weather-forecast" id="weather-forecast"></div>
    </main>
    <footer>
     <p>
